--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-principal">Meus objetivos...<span>_</span></h2>
+        <h2 class="titulo-principal">Nossos objetivos...    Maria e Vini<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
                 <button class="botao ativo">Morar junto</button>
                 <button class="botao">Casar com ela</button>
-                <button class="botao">Criar um portfolio</button>
-                <button class="botao">Atualizar meu currículo</button>
+                <button class="botao">Primeiro CPF</button>
+                <button class="botao">Segundo e terceiro CPF</button>
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
