--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         <h2 class="titulo-principal">Nossos objetivos...    Maria e Vini<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
-                <button class="botao ativo">Morar junto</button>
-                <button class="botao">Casar com ela</button>
-                <button class="botao">Primeiro CPF</button>
-                <button class="botao">Segundo e terceiro CPF</button>
+                <button class="botao ativo">batata</button>
+                <button class="botao">batata</button>
+                <button class="botao">batata</button>
+                <button class="botao">batata</button>
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <h3 class="aba-conteudo-titulo-principal">batata</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">batata</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias0"></p>
@@ -42,8 +42,8 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em Javascript</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <h3 class="aba-conteudo-titulo-principal">batata</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">batata</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias1"></p>
