Alteração de objetivos

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-principal">Nossos objetivos...    Maria e Vini<span>_</span></h2>
+        <h2 class="titulo-principal">Nossos objetivos... para 2024 - Maria e Vini<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
-                <button class="botao ativo">batata</button>
-                <button class="botao">batata</button>
-                <button class="botao">batata</button>
-                <button class="botao">batata</button>
+                <button class="botao ativo">Terminar o contrato de trabalho</button>
+                <button class="botao">Terminar o ensino médio</button>
+                <button class="botao">Passar na faculdade</button>
+                <button class="botao">Tirar 800 no enem</button>
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-principal">batata</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">batata</h4>
+                    <h3 class="aba-conteudo-titulo-principal">Espero que de tudo certo</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Ta chato</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias0"></p>
@@ -42,8 +42,8 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">batata</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">batata</h4>
+                    <h3 class="aba-conteudo-titulo-principal">Pegar meu diploma</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Formação</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias1"></p>
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Criar um portfolio com os meus 3 melhores projetos</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Terminar o curso</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com os certificados da Alura</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Vou conseguir!</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
