--- a/index.html
+++ b/index.html
@@ -17,13 +17,11 @@
                 <button class="botao">Terminar o ensino médio</button>
                 <button class="botao">Passar na faculdade</button>
                 <button class="botao">Tirar 800 no enem</button>
-                
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
                     <h3 class="aba-conteudo-titulo-principal">Espero que de tudo certo</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Ta chato</h4>
-                    <a href="https://www.google.com/search?q=trabalho&rlz=1CAXXPU_enBR1103&oq=trabalho&gs_lcrp=EgZjaHJvbWUyDwgAEEUYORixAxjJAxiABDINCAEQABiSAxiABBiKBTIKCAIQABiSAxiABDIKCAMQABixAxiABDIKCAQQABixAxiABDIKCAUQABixAxiABDIKCAYQABixAxiABDIQCAcQABiDARixAxiABBiKBTINCAgQABiDARixAxiABDIHCAkQABiPAtIBCDIwOTFqMGo3qAIAsAIA&sourceid=chrome&ie=UTF-8"></a>
+                    <h4 class="aba-conteudo-titulo-secundario">Ta chato <a href="https://www.udemy.com/course/curso-completo-de-linguagem-c-iniciante-ao-avancado/?utm_source=adwords-intl&utm_medium=udemyads&utm_campaign=CPlusPlus_new_v.PROF_la.PT_cc.BR_ti.4908&utm_content=deal4584&utm_term=_._ag_101403452333_._kw_curso%20c%20certificado_._ad_654184974194_._de_c_._dm__._pl__._ti_kwd-888551112191_._li_9102069_._pd__._&gad_source=1&gclid=Cj0KCQjwwYSwBhDcARIsAOyL0fjBnaHt21cHn-2cZfBIRms79SxMFSnG5ZcFuCnhQo8uB0SRtXrfQt4aAkH9EALw_wcB">Saiba mais</a></h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias0"></p>
@@ -46,7 +44,6 @@
                 <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-principal">Pegar meu diploma</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Formação</h4>
-                    <a href="https://www.google.com/search?q=diploma&rlz=1CAXXPU_enBR1103&oq=diploma&gs_lcrp=EgZjaHJvbWUyDAgAEEUYORixAxiABDIKCAEQABixAxiABDIKCAIQABixAxiABDIHCAMQABiABDINCAQQLhiDARixAxiABDIKCAUQABixAxiABDIHCAYQABiABDIKCAcQABixAxiABDIHCAgQABiABDIHCAkQABiABNIBCDE0ODdqMGo5qAIAsAIA&sourceid=chrome&ie=UTF-8"></a>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias1"></p>
@@ -68,7 +65,7 @@
                 </div>
                 <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-principal">Terminar o curso</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo <a href="https://www.udemy.com/course/curso-completo-de-linguagem-c-iniciante-ao-avancado/?utm_source=adwords-intl&utm_medium=udemyads&utm_campaign=CPlusPlus_new_v.PROF_la.PT_cc.BR_ti.4908&utm_content=deal4584&utm_term=_._ag_101403452333_._kw_curso%20c%20certificado_._ad_654184974194_._de_c_._dm__._pl__._ti_kwd-888551112191_._li_9102069_._pd__._&gad_source=1&gclid=Cj0KCQjwwYSwBhDcARIsAOyL0fjBnaHt21cHn-2cZfBIRms79SxMFSnG5ZcFuCnhQo8uB0SRtXrfQt4aAkH9EALw_wcB"></a></h4>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias2"></p>
