--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </div>
                 <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-principal">Vou conseguir!</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo <a href="https://www.udemy.com/course/curso-completo-de-linguagem-c-iniciante-ao-avancado/?utm_source=adwords-intl&utm_medium=udemyads&utm_campaign=CPlusPlus_new_v.PROF_la.PT_cc.BR_ti.4908&utm_content=deal4584&utm_term=_._ag_101403452333_._kw_curso+c+certificado_._ad_654184974194_._de_c_._dm__._pl__._ti_kwd-888551112191_._li_9102069_._pd__._&gad_source=1&gclid=Cj0KCQjwwYSwBhDcARIsAOyL0fjBnaHt21cHn-2cZfBIRms79SxMFSnG5ZcFuCnhQo8uB0SRtXrfQt4aAkH9EALw_wcB&couponCode=2021PM25">Cursinhos.</a></h4>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo <a href="https://www.udemy.com/course/curso-completo-de-linguagem-c-iniciante-ao-avancado/?utm_source=adwords-intl&utm_medium=udemyads&utm_campaign=CPlusPlus_new_v.PROF_la.PT_cc.BR_ti.4908&utm_content=deal4584&utm_term=_._ag_101403452333_._kw_curso+c+certificado_._ad_654184974194_._de_c_._dm__._pl__._ti_kwd-888551112191_._li_9102069_._pd__._&gad_source=1&gclid=Cj0KCQjwwYSwBhDcARIsAOyL0fjBnaHt21cHn-2cZfBIRms79SxMFSnG5ZcFuCnhQo8uB0SRtXrfQt4aAkH9EALw_wcB&couponCode=2021PM25">Cursinhos</a></h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias3"></p>
