--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
                     <h3 class="aba-conteudo-titulo-principal">Espero que de tudo certo</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Ta chato <a href="https://br.linkedin.com/jobs/est%C3%A1gio-vagas-curitiba?position=1&pageNum=0"></a></h4>
+                    <h4 class="aba-conteudo-titulo-secundario">Ta chato <a href="https://br.linkedin.com/jobs/est%C3%A1gio-vagas-curitiba?position=1&pageNum=0">Estagios.</a></h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias0"></p>
@@ -43,7 +43,7 @@
                 </div>
                 <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-principal">Pegar meu diploma</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Formação</h4>
+                    <h4 class="aba-conteudo-titulo-secundario">Formação <a href="https://diploma-c.com/?gad_source=1&gclid=Cj0KCQjwwYSwBhDcARIsAOyL0fiY6HFCuOCUvdUzAzE9gE-mhMFqAGVR59khECNDH24AcIpvOk4VKpcaAr7cEALw_wcB">Acesse</a></h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias1"></p>
